--- a/views/login.html
+++ b/views/login.html
@@ -1,16 +1,28 @@
 <div layout="row" layout-align="center center" ng-controller="loginController">
 <div layout="column" layout-align="center">
-	<div layout="column">
-		<md-input-container flex class="margin-0">
-            <label>Username</label>
-            <input ng-model="user.username" type="text" required minlength="6">
-          </md-input-container>
-		<md-input-container flex class="margin-0">
-            <label>Password</label>
-            <input type="password" ng-model="user.password" required minlength="6">
-          </md-input-container>
-	</div>
+	<form name="loginForm">
+		<div layout="column">
+		  
+			<md-input-container flex class="margin-0">
+	            <label>Username</label>
+	            <input name="username" ng-model="user.username" type="text"  md-minlength="6"  required>
+	            <div ng-messages="loginForm.username.$error"> 
+		            <div ng-message="required">This is required.</div>
+		            <div ng-message="minlength">The username must be more than 6 characters.</div>
+	       		 </div>
+	          </md-input-container>
+			<md-input-container flex class="margin-0">
+	            <label>Password</label>
+	            <input name="password" type="password" ng-model="user.password"  md-minlength="6" required>
+	            <div ng-messages="loginForm.password.$error"> 
+		            <div ng-message="required">This is required.</div>
+		            <div ng-message="minlength">TThe password must be more than 6 characters.</div>
+		        </div>
+	          </md-input-container>
+	      
+		</div>
+	</form>
 	<div layout="row" layout-align="center center">
-		<md-button class="md-title md-primary md-raised">Submit</md-button>
+		<md-button class="md-title md-primary md-raised" ng-click="openLandingPage()">Submit</md-button>
 	</div>	
 </div>
